<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/fra_edit_password_code_et"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="336dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/veryfication_code"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBlack" />

    <EditText
        android:id="@+id/fra_edit_password_new_password_et"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="397dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBlack" />

    <EditText
        android:id="@+id/fra_edit_password_confirm_password_et"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="461dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/confirme_password"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBlack" />

    <ImageView
        android:layout_width="195dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:textColor="@color/black"
        android:layout_marginTop="271dp"
        android:text="كود تغير كلمة المرور"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fra_edit_password_edit_btn"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="524dp"
        android:background="@color/green"
        android:text="@string/edite_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>