<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_fragment_rl_sub_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/login_fragment_til_phone"
                android:layout_alignParentTop="true"
                android:padding="@dimen/dim_24dp"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_fragment_til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:background="@drawable/shap_et">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/dim_4dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_fragment_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fragment_til_phone"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:background="@drawable/shap_et">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dim_4dp" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/login_fragment_cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimens_xl"
                android:layout_below="@id/login_fragment_til_password"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:text="@string/rememper"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/login_fragment_tv_forgit_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimens_xl"
                android:layout_below="@id/login_fragment_til_password"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:drawableEnd="@drawable/forget_image_btn"
                android:drawablePadding="@dimen/dimens_s"
                android:gravity="center"
                android:text="Forget Password ?"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/login_fragment_btn_create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fragment_btn_login"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:background="@drawable/shap_btn"
                android:text="@string/create_new_account"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/login_fragment_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fragment_cb_remember_me"
                android:layout_marginStart="@dimen/dimens_m"
                android:layout_marginTop="@dimen/dimens_m"
                android:layout_marginEnd="@dimen/dimens_m"
                android:background="@drawable/shape_btn_green"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>