<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_forget_password_et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/dim_8dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:background="@drawable/shap_et2"
                android:ems="11"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dim_8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lightBlack" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/fragment_forget_password_txt_text"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/fragment_forget_password_txt_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/fragment_forget_password_et_phone_number"
                android:layout_marginStart="@dimen/dim_120dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_120dp"
                android:text="@string/forget_password"
                android:textColor="@color/lightBlack"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fragment_forget_password_btn_send_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_forget_password_et_phone_number"
                android:layout_marginStart="@dimen/dim_8dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:background="@drawable/shape_btn_green"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_14sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>